@@ -1,4 +1,4 @@
-# $Id: Changes,v 1.154 2004/10/30 22:23:09 markjugg Exp $
+# $Id: Changes,v 1.155 2004/10/31 00:58:10 markjugg Exp $
 Revision history for Perl extension WWW::Mechanize
 
 XXX
@@ -33,6 +33,9 @@ XXX
 
 	* Possible matching tags for the find_link() 'tag_regex' attribute are now
 	  documented. (RT#2989, by Mark Stosberg)
+
+	* refactored find_link() to avoid use of eval(). This should improve performance 
+	  a bit and avoid potential security issues. (Mark Stosberg)
 
 1.05_02	Sat Oct  2 16:55:59 CDT 2004
 	[ENHANCEMENTS]
